add index as a route

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "example",
-  "version": "0.0.1",
+  "name": "better-isms",
+  "version": "0.0.0",
   "private": true,
   "dependencies": {
     "express": "4.14.0",
