--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "body-parser": "~1.12.4",
+    "cookie-parser": "~1.3.5",
+    "crypto-js": "^3.1.9-1",
+    "debug": "~2.2.0",
     "express": "4.14.0",
     "jade": "*",
     "mongodb": "2.0.47",
     "monk": "^2.1.0",
-    "morgan": "~1.5.3",
-    "body-parser": "~1.12.4",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0"
+    "morgan": "~1.5.3"
   }
 }
