--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jade": "*",
     "mongodb": "2.0.47",
     "monk": "^2.1.0",
-    "morgan": "~1.5.3"
+    "morgan": "~1.5.3",
+    "yamljs": "^0.3.0"
   }
 }
