--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "assert": "^1.4.1",
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
     "crypto-js": "^3.1.9-1",
@@ -12,6 +13,7 @@
     "mongodb": "2.0.47",
     "monk": "^2.1.0",
     "morgan": "~1.5.3",
+    "node-env-file": "^0.1.8",
     "yamljs": "^0.3.0"
   }
 }
